# FACET

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FACET-Language-Spec-v1.0-FULL-r1.md  FACET-SPEC-v1.0-r1.md  FACET_SPEC.md  FACET_SYSTEM_PROMPT.md  LICENSE  Makefile  README.md  SECURITY.md  USAGE.md  benchmark_simd.py  demo_simd.facet  mkdocs.yml  pyproject.toml  run_comprehensive_tests.py  test_simd.facet
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md
docs/api/: python.md
docs/examples/: index.md
docs/getting-started/: installation.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
examples/: INSTRUCTIONS.md  README.md  ai_prompt.facet  api_contract.facet  config_management.facet  data_validation.facet  recursion.facet  recursion.json  simplified_complex_test.facet  simplified_complex_test.json  test_extended.json  workflow_orchestration.facet
facet/: Makefile  __init__.py  parser.py  pyproject.toml
facet-lang/: LICENSE  README.md  pyproject.toml
facet-lang/facet_lang/: __init__.py  anchors.py  ast.py  canon.py  cli.py  errors.py  expr.py  imports.py  interpolator.py  lenses.py  lexer.py  limits.py  parser.py  plugins.py  tokens.py  typing_vars.py
facet-lang/samples/: complex.facet  complex_lenses_vars.facet  complex_ok.facet  faq.facet  system_instruction.facet
facet-lang/samples/common/: system_prompts.facet
facet-lang/tests/: test_anchor_improvements.py  test_architectural_fixes.py  test_canon_core.py  test_complex_no_import.py  test_deterministic_lenses.py  test_e2e_examples.py  test_empty_lines.py  test_fence_improvements.py  test_lens_correct.facet  test_lens_good.facet  test_lens_seed.facet  test_smoke.py  test_spec_100_percent.facet  test_spec_errors.py  test_spec_exact.facet
facet-python/: README-DEV.md  pyproject.toml
facet-python/examples/: complete_test.facet  test_extended.facet
facet-python/facet/: cli.py  errors.py  lenses.py
facet/facet_python_ref.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
server/facet_mcp/: README.md  server.py  setup.py
server/facet_mcp/examples/: client_example.py
server/facet_mcp/tests_server/: run_tests.py  test_e2e.py  test_facets_engine.py  test_integration.py  test_server.py  test_validator.py
specs/: FACET-Language-Spec-v1.0-FULL-r1.md  README.md
src/: README.md
src/facet/: README-DEV.md  __init__.py  cli.py  errors.py  lenses.py  parser.py  pyproject.toml
tests/: run_comprehensive_tests.py  test_edge_cases.py  test_facet_integration.py  test_golden.py  test_lenses_unit.py  test_memory_profiling.py  test_orchestrator.py  test_performance_benchmark.py  test_regression.py  test_roundtrip.py  test_simd_correctness.py
tests/fixtures/: test_anchors.facet  test_extended_scalars.facet  test_formatting.facet  test_lenses.facet
tools/: .pre-commit-config.yaml  Makefile  README.md  tox.ini
