[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facet-lang"
version = "1.0.1"
description = "FACET v1.0 — Deterministic markup for AI instructions"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["facet*"]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "flake8",
  "mypy",
  "pre-commit"
]
test = [
  "pytest>=7.0",
  "pytest-cov"
]
docs = [
  "mkdocs-material",
  "mkdocs-mermaid2-plugin"
]
all = [
  "facet-lang[dev,docs]"
]

[project.urls]
Homepage = "https://github.com/rokoss21/FACET"
Documentation = "https://facet-lang.readthedocs.io/"
Repository = "https://github.com/rokoss21/FACET"
Issues = "https://github.com/rokoss21/FACET/issues"
Changelog = "https://github.com/rokoss21/FACET/blob/main/CHANGELOG.md"

[project.scripts]
facet = "facet.cli:main"

# Tool configurations
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

