[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "facet-python-ref"
version = "1.0.0rc1"
description = "FACET v1.0 r1 minimal reference parser (Python)"
authors = [{name="Emil Rokossovskiy"}]
readme = "../README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
facet = "facet.cli:main"
