[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facet-lang"
version = "1.0.1"
description = "FACET v1.0 — Deterministic markup for AI instructions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  {name = "Emil Rokossovskiy", email = "ecsiar@gmail.com"}
]
maintainers = [
  {name = "Emil Rokossovskiy", email = "ecsiar@gmail.com"}
]
keywords = ["ai", "markup", "deterministic", "parser", "facets", "lenses"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black",
  "isort",
  "flake8",
  "mypy",
  "pre-commit"
]
docs = [
  "mkdocs-material",
  "mkdocs-mermaid2-plugin"
]
all = [
  "facet-lang[dev,docs]"
]

[project.urls]
Homepage = "https://github.com/rokoss21/FACET"
Documentation = "https://facet-lang.readthedocs.io/"
Repository = "https://github.com/rokoss21/FACET"
Issues = "https://github.com/rokoss21/FACET/issues"
Changelog = "https://github.com/rokoss21/FACET/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["facet*"]

[project.scripts]
facet = "facet.cli:main"

# Tool configurations
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["../../../tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests"
]

[tool.coverage.run]
source = ["facet"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "setup.py"
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod"
]
